fix: fix createTask bug

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
             class="taskTime"
             type="number"
             step="0.5"
-            minlength="0.5"
+            min="0.5"
             placeholder="Duração (em horas)"
           />
         </div>
