style: more beautiful interface

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <h1 class="">Editor de texto - Post Helper</h1>
+  <body class="bg-dark text-light">
+    <h1 class="text-center">Editor de texto - Post Helper</h1>
 
-    <form id="editor" class="container bg-dark text-light p-4">
-      <h2 id="currentDay">Dia - de 100 #100DaysOfCode</h2>
+    <form id="editor" class="container border border-3 p-4">
+      <h2 id="currentDay">~ Dia - de 100</h2>
 
       <div>
         <h2 class="mt-5">Cabeçalho</h2>
@@ -37,7 +37,7 @@
           <emoji-picker class="emojis"></emoji-picker>
           <input
             class="taskEmoji"
-            placeholder="Escolha um emoji"
+            placeholder="Emoji"
             maxlength="2"
             onfocus="emoji()"
             onblur="emoji()"
@@ -48,8 +48,8 @@
             type="number"
             step="0.5"
             min="0.5"
-            placeholder="Duração (em horas)"
-          />
+            placeholder="Horas"
+          /><br />
         </div>
       </div>
 
@@ -63,7 +63,7 @@
       </div>
     </form>
 
-    <h2 id="preview" class="bg-secondary container"></h2>
+    <h2 id="preview" class="preview text-dark container mt-5"></h2>
 
     <script src="script.js"></script>
     <script
