--- a/src/index.html
+++ b/src/index.html
@@ -30,26 +30,38 @@
 
       <div>
         <h2 class="mt-5">Tarefas realizadas</h2>
-        <h2 id="createTask" class="btn btn-success">Criar tarefa</h2>
+        <button type="button" id="createTask" class="btn btn-success mb-3">
+          Criar tarefa
+        </button>
         <br />
 
         <div id="tasks">
-          <emoji-picker class="emojis"></emoji-picker>
-          <input
-            class="taskEmoji"
-            placeholder="Emoji"
-            maxlength="2"
-            onfocus="emoji()"
-            onblur="emoji()"
-          />
-          <input class="taskName" placeholder="Qual foi a tarefa" />
-          <input
-            class="taskTime"
-            type="number"
-            step="0.5"
-            min="0.5"
-            placeholder="Horas"
-          /><br />
+          <div>
+            <emoji-picker class="emojis"></emoji-picker>
+            <input
+              class="taskEmoji"
+              placeholder="Emoji"
+              maxlength="2"
+              onfocus="emoji()"
+              onblur="emoji()"
+            />
+            <input class="taskName" placeholder="Qual foi a tarefa" />
+            <input
+              class="taskTime"
+              type="number"
+              step="0.5"
+              min="0.5"
+              placeholder="Horas"
+            />
+            <button
+              type="button"
+              class="btn btn-danger"
+              onclick="this.parentElement.remove()"
+            >
+              🗑️
+            </button>
+            <br />
+          </div>
         </div>
       </div>
 
