feat: display characters limit

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="bg-dark text-light">
+  <body class="bg-dark text-light container">
     <h1 class="text-center">Editor de texto - Post Helper</h1>
 
-    <form id="editor" class="container border border-3 p-4">
+    <form id="editor" class="border mb-5 border-3 p-4">
       <h2 id="currentDay">~ Dia - de 100</h2>
 
       <div>
@@ -75,7 +75,8 @@
       </div>
     </form>
 
-    <h2 id="preview" class="preview text-dark container mt-5"></h2>
+    <p id="charactersLimit">- / 280</p>
+    <h2 id="preview" class="preview text-dark"></h2>
 
     <script src="script.js"></script>
     <script
