feat: add copy text

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,7 @@
 
     <p id="charactersLimit">- / 280</p>
     <h2 id="preview" class="preview text-dark"></h2>
+    <button class="btn btn-success" onclick="copyText()">Copiar texto</button>
 
     <script src="script.js"></script>
     <script
