feat: add overlaySettings

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
           placeholder="Desafio de quanto dias"
         />
       </div>
+      <div onclick="showSettings()" class="overlaySettings"></div>
 
       <div>
         <h2 class="mt-5">Cabeçalho</h2>
